[Driver] Use case-insensitive manner to check duplicate filenames of inputs.

When it comes to case-insensitive filesystems, e.g., Mac OS
Extended (Journaled), case-sensitive filename comparison is not
sufficient. Inputs with case-insensitively matched base filenames
cannot produce individual outputs under the same path. This patch
makes it more conservative by checking base filenames
case-insensitively.

Resolves: SR-7887.