test/Driver/driver-compile.swift
@@ -34,6 +34,8 @@
 // RUN: not %swiftc_driver -driver-print-jobs -c -target x86_64-apple-macosx10.9 %s %s 2>&1 | %FileCheck -check-prefix DUPLICATE-NAME %s
 // RUN: cp %s %t
 // RUN: not %swiftc_driver -driver-print-jobs -c -target x86_64-apple-macosx10.9 %s %t/driver-compile.swift 2>&1 | %FileCheck -check-prefix DUPLICATE-NAME %s
+// RUN: mv %t/driver-compile.swift %t/Driver-compile.swift
+// RUN: not %swiftc_driver -driver-print-jobs -c -target x86_64-apple-macosx10.9 %s %t/Driver-compile.swift 2>&1 | %FileCheck -check-prefix DUPLICATE-NAME %s
 
 // RUN: %swiftc_driver -driver-print-jobs -c -target x86_64-apple-macosx10.9 %s %S/../Inputs/empty.swift -module-name main -driver-filelist-threshold=0 2>&1 | %FileCheck -check-prefix=FILELIST %s
 
@@ -98,7 +100,7 @@
 // OBJ: -c{{ }}
 // OBJ: -o {{[^-]}}
 
-// DUPLICATE-NAME: error: filename "driver-compile.swift" used twice: '{{.*}}test/Driver/driver-compile.swift' and '{{.*}}driver-compile.swift'
+// DUPLICATE-NAME: error: filename "{{[Dd]}}river-compile.swift" used twice: '{{.*}}test/Driver/driver-compile.swift' and '{{.*[Dd]}}river-compile.swift'
 // DUPLICATE-NAME: note: filenames are used to distinguish private declarations with the same name
 
 // FILELIST: bin/swift
